# PlotJuggler

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.orig  COMPILE.md  Dockerfile  README.md  conanfile.txt  contributors.txt  package.xml  vcpkg.json
.github/workflows/: ros2-rolling.yaml  ros2.yaml  snap.yaml
appimage/: AppImage.sh
cmake/: Config.cmake.in  FindZeroMQ.cmake
datasamples/: default.snippets.xml
datasamples/rosbag2_test/: metadata.yaml
include/PlotJuggler/: messageparser_base.h  plotdata.h  plotdatabase.h  transform_function.h
installer/: config.xml
installer/io.plotjuggler.application/meta/: installscript.qs  package.xml
plotjuggler_app/: CMakeLists.txt  color_map.cpp  color_map.h  colormap_editor.cpp  colormap_editor.h  colormap_selector.cpp  colormap_selector.h  curvelist_panel.cpp  curvetree_view.cpp  curvetree_view.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multifile_prefix.cpp  new_release_dialog.cpp  new_release_dialog.h  new_release_dialog.ui  nlohmann_parsers.cpp  nlohmann_parsers.h  plot_background.cpp  plot_background.h  plot_docker.cpp  plot_docker.h  plot_docker_toolbar.cpp  plot_docker_toolbar.h  plot_docker_toolbar.ui  plotwidget.cpp  plotwidget.h  plotwidget_editor.cpp  plotwidget_editor.h  plotwidget_proxy.cpp  plotwidget_transforms.cpp  preferences_dialog.cpp  preferences_dialog.ui  qwtconfig.pri  resource.qrc  statistics_dialog.cpp  statistics_dialog.h  statistics_dialog.ui  (+5 more)
plotjuggler_app/resources/: default.snippets.xml  lua_style_dark.xml  stylesheet_dark.qss  stylesheet_light.qss
plotjuggler_app/resources/skin/: README.md  about_window_body.html
plotjuggler_app/transforms/: custom_function.cpp  custom_function.h  first_derivative.cpp  function_editor.cpp  function_editor.h  integral_transform.cpp  lua_custom_function.cpp  lua_custom_function.h  moving_average_filter.cpp  moving_average_filter.h  moving_rms.cpp  moving_rms.h  moving_variance.cpp  moving_variance.h  outlier_removal.cpp  outlier_removal.h  samples_count.cpp  samples_count.h  scale_transform.cpp
plotjuggler_base/: CMakeLists.txt
plotjuggler_base/include/PlotJuggler/: alphanum.hpp  dataloader_base.h  datastreamer_base.h  messageparser_base.h  pj_plugin.h  plotdatabase.h  plotwidget_base.h  plotwidget_proxy.h  reactive_function.h  statepublisher_base.h  svg_util.h  timeseries.h  toolbox_base.h  transform_function.h
plotjuggler_base/include/PlotJuggler/contrib/: ring_span.hpp
plotjuggler_base/include/PlotJuggler/contrib/fmt/: args.h  chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  xchar.h
plotjuggler_base/src/: datastreamer_base.cpp  plotlegend.cpp  plotmagnifier.cpp  plotpanner.cpp  plotpanner.h  plotwidget_base.cpp  plotzoomer.cpp  reactive_function.cpp  transform_function.cpp
plotjuggler_plugins/DataLoadCSV/: CMakeLists.txt  dataload_csv.cpp  dataload_csv.h  dataload_csv.ui
plotjuggler_plugins/DataLoadMCAP/: CMakeLists.txt  dataload_mcap.cpp  dataload_mcap.h  dataload_params.h  dialog_mcap.cpp
plotjuggler_plugins/DataLoadParquet/: CMakeLists.txt  dataload_parquet.cpp
plotjuggler_plugins/DataLoadULog/: CMakeLists.txt  dataload_ulog.cpp  dataload_ulog.h  string_view.hpp  ulog_parameters_dialog.cpp  ulog_parser.cpp  ulog_parser.h
plotjuggler_plugins/DataLoadZcm/: CMakeLists.txt  dataload_zcm.cpp  dataload_zcm.h  dataload_zcm.ui
plotjuggler_plugins/DataStreamLSL/: CMakeLists.txt
plotjuggler_plugins/DataStreamMQTT/: CMakeLists.txt  math.proto  mqtt_test_json.py  mqtt_test_proto.py  robot_state.proto  robot_state_pb2.py
plotjuggler_plugins/DataStreamMQTT/cmake/: Findmosquitto.cmake
plotjuggler_plugins/DataStreamUDP/: CMakeLists.txt  udp_client.py  udp_server.cpp
plotjuggler_plugins/DataStreamWebsocket/: CMakeLists.txt
plotjuggler_plugins/DataStreamZMQ/: CMakeLists.txt  datastream_zmq.cpp  zmq.hpp
plotjuggler_plugins/DataStreamZcm/: CMakeLists.txt  datastream_zcm.cpp  datastream_zcm.h  datastream_zcm.ui
plotjuggler_plugins/ParserDataTamer/: CMakeLists.txt  datatamer_parser.cpp
plotjuggler_plugins/ParserProtobuf/: protobuf_factory.cpp  protobuf_parser.cpp  protobuf_parser.h  protobuf_parser.ui
plotjuggler_plugins/ParserROS/: CMakeLists.txt  ros1_parser.h  ros2_parser.h  ros_parser.cpp  ros_parser.h  special_messages.h
plotjuggler_plugins/ParserROS/rosx_introspection/: CMakeLists.txt
plotjuggler_plugins/ParserROS/rosx_introspection/include/rosx_introspection/details/: conversion_impl.hpp
plotjuggler_plugins/PluginsZcm/: CMakeLists.txt  dataload_zcm.cpp  dataload_zcm.h  datastream_zcm.cpp  datastream_zcm.h  datastream_zcm.ui
plotjuggler_plugins/PluginsZcm/cmake/: FindZcm.cmake
plotjuggler_plugins/StatePublisherCSV/: CMakeLists.txt
plotjuggler_plugins/ToolboxFFT/: CMakeLists.txt  toolbox_FFT.cpp  toolbox_FFT.h  toolbox_FFT.ui
plotjuggler_plugins/ToolboxFFT/KissFFT/: CMakeLists.txt
plotjuggler_plugins/ToolboxLuaEditor/: lua_editor.ui
plotjuggler_plugins/ToolboxQuaternion/: CMakeLists.txt  quaternion_to_rpy.cpp  quaternion_to_rpy.h  quaternion_to_rpy.ui  toolbox_quaternion.cpp  toolbox_quaternion.h
plotjuggler_plugins/VideoViewer/: video_dialog.cpp
plotjuggler_plugins/ZcmUtils/: CMakeLists.txt
plugins/DataStreamLSL/: datastream_lsl.cpp
plugins/StatePublisherCSV/: publisher_csv.cpp
snap/: snapcraft.yaml
snap_core20/: snapcraft.yaml
snap_core20/local/: launcher-plotjuggler-ros
snap_core22/: snapcraft.yaml
snap_core22/local/: launcher-plotjuggler-ros2
src/: curvelist_panel.cpp  curvelist_panel.h  curvelist_view.h  curvetree_view.cpp  mainwindow.cpp  mainwindow.h  nlohmann_parsers.cpp  plotwidget.cpp  preferences_dialog.cpp  utils.cpp
